# fit-app

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  bulk_import.py  deduplicate_activities.py  enrich_names.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_05_05_0919-379c3241c147_initial_schema.py  2026_05_05_1157-6bf7f63a1065_add_activity_name.py  2026_05_06_0755-472807ab1cee_add_notes_to_activities.py  2026_05_06_1024-5a37abab0ca1_add_oauth_account_table.py  2026_05_06_1203-159b99c22872_add_email_otp_table_and_user_profile_.py  2026_05_06_1500-fa3c8e7b1d2a_add_normalized_power_ftp_weight.py  2026_05_07_1632-fb9a4f2c9133_add_strava_tokens.py  2026_05_08_0810-fa4b4510841b_add_strava_import_status.py  2026_05_08_0846-d1c777f08bfa_add_streams_fetched_to_activities.py
apps/api/src/fitapp/: __init__.py  config.py  db.py  main.py
apps/api/src/fitapp/auth/: users.py
apps/api/src/fitapp/models/: __init__.py  activity.py  email_otp.py  user.py
apps/api/tests/: conftest.py  test_activities.py  test_activity_detail.py  test_activity_edit.py  test_activity_export.py  test_activity_filters.py  test_auth.py  test_change_password.py  test_delete_account.py  test_delete_activity.py  test_enrich_names.py  test_geocoding.py  test_google_oauth.py  test_power_estimation.py  test_register_multistep.py  test_remember_me.py  test_repair.py  test_smoke.py  test_stats.py  test_strava.py  test_upload.py  test_users.py  test_verification.py
doc/: PLAN.md
(+60 files in other folders)
